Updated calendar component

--- a/src/app/app.calendar.html
+++ b/src/app/app.calendar.html
@@ -1,7 +1,7 @@
 <div class="calendar">
   <div class="heading">
     <button id="chevron-left" class="btn btn-primary" type="button"> <span class="glyphicon glyphicon-chevron-left"></span> </button>
-    <h1>{{getMonth()}} {{year}}</h1>
+    <h1> {{date | date: 'MMMM y'}} </h1>
     <button id="chevron-right" class="btn btn-primary" type="button"> <span class="glyphicon glyphicon-chevron-right"></span> </button>
 
   </div>
@@ -9,7 +9,7 @@
   <table class="table table-bordered">
     <colgroup>
       <col>
-      <col>
+      <col> 
       <col>
       <col>
       <col>
@@ -27,57 +27,12 @@
         <th scope="col">SATURDAY</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-      </tr>
+    <!-- <calendar-days></calendar-days> -->
 
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-      </tr>
+    <tr *ngFor="let test of tests" >
+      <td *ngFor="let test of dayTests" >{{test.number}}</td>
+    </tr>
 
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-      </tr>
 
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-      </tr>
-
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-      </tr>
-
-    </tbody>
   </table>
 </div>
